cards fixed on small screen

--- a/Software_Code/client/public/index.css
+++ b/Software_Code/client/public/index.css
@@ -14,9 +14,7 @@ html, body { padding-top: 4%; padding-left:3%; max-width: 100%;
     margin-top: 25%;
     
   }
-  #main{
-    left:10%;  
-    }
+
     #logo{
       display:none;
     
@@ -27,15 +25,15 @@ html, body { padding-top: 4%; padding-left:3%; max-width: 100%;
     height: 100%;
     
   }
+ 
   #sticky-sidebar{
     left:30%;
   }
 }
 
 
-#main{
-  left:10%;
-}
+
+
 .navbar {
   -webkit-box-shadow: 0 8px 6px -6px #999;
   -moz-box-shadow: 0 8px 6px -6px #999;
